--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flower Shop </title>
+
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;800&family=Lato:wght@400;700;900&family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 
     <!-- CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
+
+    <!-- HEADER -->
+    <header class="banner">
+        <div class="banner-texts">
+            <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+            <p class="banner-description">Flower Shop is a leader in online gift giving and flower delivery, providing customers around the world with a marketplace.</p>
+            <button class="btn-primary">Shop Now</button>
+        </div>
+        <img class="banner-flower" src="images/pngwing 10.png" alt="flower picture">
+
+    </header>
+
+    <!-- MAIN -->
+    <main>
+
+    </main>
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
