feature section done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
 
     <!-- MAIN -->
     <main>
+        
+        <!--   ----Feature Section---- -->
+        <section class="feature">
+            <h3 class="feature-title">Our Featured Flowers</h3>
+            <p class="para-description">Flower Shop is the perfect online flower delivery destination for any occasion, <br>whether it's your most cherished holiday </p>
+
+            <div class="feature-cards">
+                <div class="lotus">
+                    <img class="lotus-image" src="images/pngwing 6.png" alt="">
+                    <figcaption><u>Lotus Flower Tree</u></figcaption>
+                </div>
+                <div class="antrantia">
+                    <img class="antrantia-image" src="images/pngwing 5.png" alt="">
+                    <figcaption><u>Astrantia Flower Tree</u></figcaption>
+                </div>
+                <div class="daisy">
+                    <img class="daisy-image" src="images/pngwing 7.png" alt="">
+                    <figcaption>Daisy Flower Tree</figcaption>
+                </div>
+            </div>
+            
+        </section>
 
     </main>
     <!-- FOOTER -->
