service section done

--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
             
         </section>
 
+        <!-- SERVICE SECTION -->
+        <section class="service">
+            <div class="service-card">
+                <img src="images/Group 57.png" alt="">
+                <h5 class="service-title">Same Day Delivery. Click & Collect.</h5>
+            </div>
+            <div class="service-card">
+                <img src="images/Group 58.png" alt="">
+                <h5 class="service-title">Fresh Flowers. Local Growers.</h5>
+            </div>
+            <div class="service-card">
+                <img src="images/Group 59.png" alt="">
+                <h5 class="service-title">24/7 Free Support.</h5>
+            </div>
+        </section>
+
     </main>
     <!-- FOOTER -->
     <footer>
