--- a/index.html
+++ b/index.html
@@ -69,9 +69,48 @@
             </div>
         </section>
 
+        <!-- HOT DEAL SECTION -->
+        <section class="hot-deal">
+            <div class="deal-info">
+                <h3>Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <p class="para-description">Our discounted flower bouquets, plants, and gifts have all the style,charm, and <br>freshness that you've come to expect from Flower shop</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <img src="images/pngwing 8.png" alt="">
+        </section>
+
+        <!-- ----INSTAGRAM SECTION-----  -->
+        <section class="instagram">
+            <div class="insta-info">
+                <h3 class="insta-title">Instagram</h3>
+                <p class="para-description">Brighten up someone's day with a handpicked arrangement from <br>thousand of Instagram gallery of flowers</p>
+            </div>
+            <div class="insta-gallery">
+                <img src="images/Flower 01.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+
+            </div>
+
+        </section>
+
+        <!-- ----LATEST DEAL SECTION------- -->
+        <section class="latest-deal">
+            <h3>Get the Latest Deals</h3>
+            <p class="para-description">$30 discounts on your fist order</p>
+            <form class="subscribe" action="">
+                <input type="email" placeholder="Enter Your email" name="" id="">
+                <input type="submit" value="Subscribe" class="btn-primary">
+            </form>
+        </section>
+
     </main>
     <!-- FOOTER -->
     <footer>
+        <h3><span>Flower</span>Shop</h3>
+        <p class="para-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p class="para-description"><small>@2020-2023, FlowerShop.com. All rights reserved.</small></p>
 
     </footer>
     
