bonus section done

--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 
             </div>
 
+        <!-- ----BONUS SECTION------ -->
+        <section class="bonus">
+            <img src="images/brooke-lark-DW_nQY7e8t8-unsplash.jpg" alt="">
+            <div class="bonus-info">
+                <h3>Birthday Wish Granted</h3>
+                <p class="para-description">Give the gift of freshness.</p>
+                <button class="btn-bonus"><a href="ftd.com">Shop Birthday Flowers</a></button>
+            </div>
+
+        </section>
         </section>
 
         <!-- ----LATEST DEAL SECTION------- -->
@@ -108,8 +118,8 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h3><span>Flower</span>Shop</h3>
-        <p class="para-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <h2><span>Flower</span>Shop</h2>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         <p class="para-description"><small>@2020-2023, FlowerShop.com. All rights reserved.</small></p>
 
     </footer>
